tests/ui/issues/issue-18107.stderr
error[E0746]: return type cannot have an unboxed trait object
  --> $DIR/issue-18107.rs:4:5
   |
LL |     dyn AbstractRenderer
   |     ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
help: return an `impl Trait` instead of a `dyn Trait`
   |
LL |     impl AbstractRenderer
   |     ~~~~
help: alternatively, box the return type to make a boxed trait object, and wrap all of the returned values in `Box::new`
   |
LL ~     Box<dyn AbstractRenderer>
LL |
LL | {
LL |     match 0 {
LL ~         _ => Box::new(unimplemented!())
   |
help: finally, you might be able to borrow from the function's argument
   |
LL |     &dyn AbstractRenderer
   |     +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0746`.
